--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,31 +1,13 @@
 /*
-	Directive by HTML5 UP
+	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* Type */
 
-	hr {
-		border-top: solid 1px #cccccc;
-	}
-
-	blockquote {
-		border-left: solid 0.5em #cccccc;
-	}
-
-/* Section/Article */
-
-	header.major {
-		border-color: #cccccc;
-	}
-
-		header.major p {
-			border-top: solid 1px #cccccc;
-		}
-
-	footer.major {
-		border-color: #cccccc;
+	body, input, select, textarea {
+		color: #ffffff;
 	}
 
 /* Button */
@@ -33,95 +15,40 @@
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
+	button,
 	.button {
 		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-		input[type="submit"].alt,
-		input[type="reset"].alt,
-		input[type="button"].alt,
-		.button.alt {
-			border: solid 1px #cccccc;
+		input[type="submit"]:after,
+		input[type="reset"]:after,
+		input[type="button"]:after,
+		button:after,
+		.button:after {
+			display: none;
 		}
+
+/* Features */
+
+	.features {
+		border: solid 1px;
+	}
 
 /* Form */
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="tel"],
 	select,
 	textarea {
-		position: relative;
-		border: solid 1px #cccccc;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
+		background: transparent;
+		border: solid 1px;
 	}
 
-/* Image */
+/* Split */
 
-	.image {
-		border: 0;
-		display: inline-block;
-		position: relative;
-	}
-
-		.image:after {
-			display: none;
-		}
-
-/* Box */
-
-	.box {
-		border: solid 1px #cccccc;
-	}
-
-/* Header */
-
-	#header {
-		background-image: url("../../images/header.jpg") !important;
-		background-size: cover !important;
-		background-position: scroll !important;
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
-		padding: 8em 0 !important;
-		color: #ffffff;
-	}
-
-		#header a {
-			color: inherit;
-		}
-
-		#header:before {
-			content: '';
-			background-image: url("images/overlay.png");
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			display: block;
-			z-index: 0;
-		}
-
-		#header > * {
-			position: relative;
-			z-index: 1;
-		}
-
-		#header .logo {
-			-ms-behavior: url("assets/js/ie/PIE.htc");
-		}
-
-/* Footer */
-
-	#footer {
-		background-image: none !important;
-		margin-top: 0 !important;
-		padding: 4em 0 !important;
-		color: #ffffff;
-	}
-
-/* Main */
-
-	#main {
-		padding: 4em 0;
+	.split.style1 > :first-child {
+		padding-right: 2em;
+		width: 70%;
 	}
