--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -4,39 +4,15 @@
 @import 'libs/skel';
 
 /*
-	Directive by HTML5 UP
+	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-$color-border-ie: #cccccc;
+/* Type */
 
-/* Basic */
-
-	hr {
-		border-top: solid 1px $color-border-ie;
-	}
-
-	blockquote {
-		border-left: solid 0.5em $color-border-ie;
-	}
-
-/* Section/Article */
-
-	header {
-		&.major {
-			border-color: $color-border-ie;
-
-			p {
-				border-top: solid 1px $color-border-ie;
-			}
-		}
-	}
-
-	footer {
-		&.major {
-			border-color: $color-border-ie;
-		}
+	body, input, select, textarea {
+		color: _palette(fg-bold);
 	}
 
 /* Button */
@@ -44,32 +20,8 @@ $color-border-ie: #cccccc;
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
+	button,
 	.button {
-		position: relative;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-
-		&.alt {
-			border: solid 1px $color-border-ie;
-		}
-	}
-
-/* Form */
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea {
-		position: relative;
-		border: solid 1px $color-border-ie;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-	}
-
-/* Image */
-
-	.image {
-		border: 0;
-		display: inline-block;
 		position: relative;
 
 		&:after {
@@ -77,59 +29,31 @@ $color-border-ie: #cccccc;
 		}
 	}
 
-/* Box */
+/* Features */
 
-	.box {
-		border: solid 1px $color-border-ie;
+	.features {
+		border: solid 1px;
 	}
 
-/* Header */
+/* Form */
 
-	#header {
-		background-image: url('../../images/header.jpg') !important;
-		background-size: cover !important;
-		background-position: scroll !important;
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-		padding: 8em 0 !important;
-		color: _palette(accent2, fg-bold);
-
-		a {
-			color: inherit;
-		}
-
-		&:before {
-			content: '';
-			background-image: url('images/overlay.png');
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			display: block;
-			z-index: 0;
-		}
-
-		> * {
-			position: relative;
-			z-index: 1;
-		}
-
-		.logo {
-			-ms-behavior: url('assets/js/ie/PIE.htc');
-		}
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	input[type="tel"],
+	select,
+	textarea {
+		background: transparent;
+		border: solid 1px;
 	}
 
-/* Footer */
+/* Split */
 
-	#footer {
-		background-image: none !important;
-		margin-top: 0 !important;
-		padding: 4em 0 !important;
-		color: _palette(accent1, fg-bold);
-	}
-
-/* Main */
-
-	#main {
-		padding: 4em 0;
+	.split {
+		&.style1 {
+			> :first-child {
+				padding-right: 2em;
+				width: 70%;
+			}
+		}
 	}
