added a new archives layout

--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -20,7 +20,7 @@
       {% include nav-social.html %}
     </section>
 
-  {% elsif page.layout == "categories" or page.layout == "blog"%}
+  {% elsif page.layout == "archives" or page.layout == "blog"%}
     <section class="section  section--category-index">
       <h3>Index</h3>
       {% include nav-categories.html %}
