--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -16,9 +16,8 @@ layout: default
         {{ collectiondata.description | markdownify }}
 
       {% else %}
-        <h1>{{ page.title }}</h1>
+        <h1>{{ page.title }} Archives</h1>
         {{ content }}
-        
       {% endif %}
 
     </article>
