enabled related posts

--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -10,7 +10,7 @@
     
     <i> In case you have any feedback or comments, do get in touch! </i>
     {% include nav-social.html %}
-      {% comment %} {% include post-related.html %} {% endcomment %}
+      {% include post-related.html %}
     </section>
 
   {% elsif page.layout == "page"%}
