removed [...] from archives lists

--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -25,7 +25,7 @@
 
             <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
             {% include post-meta.html %}
-            {{ post.excerpt | markdownify | truncatewords: 60 }} [...]
+            {{ post.excerpt | markdownify | truncatewords: 60}} 
 
           </article>
         </li>
