added footer color

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -14,8 +14,8 @@ $bodyColour: #cadad5 !default;
 $linkColour: #05bf85 !default;
 $hoverColour: #a4c4a4 !default;
 $focusColour: #fa407a !default;
-$captionColour: #396d39 !default;
+$captionColour: #d2d8d6 !default;
 $white: #ffffff !default;
-
+$footerColor: #424242 !default;
   
 @import "alembic";
