fixed focus color

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -13,7 +13,7 @@ $headingColour: #d2d8d6 !default;
 $bodyColour: #cadad5 !default;
 $linkColour: #05bf85 !default;
 $hoverColour: #a4c4a4 !default;
-$focusColour: #fa407a !default;
+$focusColour: #05bf85 !default;
 $captionColour: #d2d8d6 !default;
 $white: #ffffff !default;
 $footerColor: #424242 !default;
