--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -102,7 +102,19 @@ body {
     }
   }
   
-  
+  .header_container{
+    @include flexbox;
+    @include justify-content(space-between);
+    padding: 0.5rem 3rem;
+    @include breakpoint(break-1) {
+      @include align-items(center);
+    }
+    margin: 0 auto;
+    -webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
+
+  }
+
   // Pagination nav
   .nav--paginator {
     @include flexbox;
