--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -10,7 +10,7 @@ $accentColour: #05bf85 !default;
 
 // Text colours
 $headingColour: #d2d8d6 !default;
-$bodyColour: #cadad5 !default;
+$bodyColour: #d1d8d6 !default;
 $linkColour: #05bf85 !default;
 $hoverColour: #a4c4a4 !default;
 $focusColour: #05bf85 !default;
