--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -24,7 +24,7 @@
           <article class="article  article--post">
 
             <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-            {% include post-meta.html %}
+            {% include post-meta-nav.html %}
             {{ post.excerpt | markdownify | truncatewords: 60}} 
 
           </article>
