--- a/_includes/post-related.html
+++ b/_includes/post-related.html
@@ -1,22 +1,17 @@
 <h3>Related posts</h3>
 <ul class="list  list--posts">
-  {% for category in page.categories %}
-   {% assign cat_name = category %}
-        {% for post in site.categories[cat_name] limit: 2%}
-          {%if post.title != page.title%}
-            {% assign has_related = true %}
-            <li class="item  item--post">
-              <article class="article  article--post  typeset">
+  {% for page in site.related_posts limit: 3 %}
+    {% assign has_related = true %}
+    <li class="item  item--post">
+      <article class="article  article--post  typeset">
 
-                <h4><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h4>
-                {% include post-meta.html %}
-                {{ post.excerpt | markdownify | truncatewords: 20 }}
+        <h4><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h4>
+        {% include post-meta.html %}
+        {{ page.excerpt | markdownify | truncatewords: 25 }}
 
-              </article>
-            </li>
-          {%endif%}
-        {% endfor %}
-    {% endfor %}
+      </article>
+    </li>
+  {% endfor %}
 
   {% if has_related != true %}
     <p>There are no related posts</p>
