--- a/_includes/post-related.html
+++ b/_includes/post-related.html
@@ -1,4 +1,4 @@
-<h3>Related posts</h3>
+<h3>Explore the Blog!</h3>
 <ul class="list  list--posts">
   {% for page in site.related_posts limit: 3 %}
     {% assign has_related = true %}
