--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -1,6 +1,6 @@
 {% if page.categories %}
   {% capture categories %}
-    {% for category in page.categories %}<a href="/blog/{{ item | first | slugify | downcase }}"
+    {% for category in page.categories %}
       <span class="label  label--category"><a href="{{ site.baseurl }}/blog/{{ category | slugify | downcase }}">{{ category }}</a></span>{% if forloop.last == false %},{% endif %}
     {% endfor %}
   {% endcapture %}
