added copy buttons to subscribe and blog posts

--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,5 +1,7 @@
 <hr>
     <h4>Subscribe to the Blog!</h4>
     <p>Want to get notified about the latest updates?</p>
-    Enter your name and email <a href="https://forms.gle/noqpoTg8g83W1GRp9"> here!</a> 
+
+    {% include copy-button.html text="Subscribe Via RSS" icon="rss" id="rss" link="www.keshavvignesh.com/feed.xml" color="#05e5ec" %}
+    {% include button.html text="Subscribe Via Email" icon="email" link="https://forms.gle/noqpoTg8g83W1GRp9" color="#05bf85" %}
 <hr>
