--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -4,7 +4,9 @@
     
     <section class="section  section--related-posts">
     {% include subscribe.html %}
-    <i> If you found the content useful, do share </i>
+    <p><i> If you found the content useful, do share </i></p>
+    {% assign url = site.url | append: site.baseurl | append: page.url %}
+    {% include copy-button.html text="Copy Link" icon="link" id="blogpost" link=url %}
     {% include nav-share.html %}
     
     <i> In case you have any feedback or comments, do get in touch! </i>
