Moved subscribe section to end of post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,7 @@ layout: default
     <div style="text-align:justify;">
     {{ content }}
     </div>
-  
-
+    {% include subscribe.html %}
     {% include post-comments.html %}
 
   </article>
