Aesthetic Updates to the Website

--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -16,16 +16,14 @@
   {% elsif page.layout == "page"%}
     <section class="section  section--description">
       <p> Welcome to my blog! A place where I rant about cool stuff in tech. <a href="/About/">More about me</a></p>
-      {% include figure.html image="/images/newprofilepic.png" alt="Image with just alt text" %}
+      {% include figure.html image="/images/profilepic.jpg" alt="Keshav's Profile Pic" %}
       {% include nav-social.html %}
       {% include subscribe.html %}
     </section>
 
   {% elsif page.layout == "home"%}
     <section class="section  section--description">
-      {% comment %} <h3 style="text-align: center">J KESHAV BHUPATHY VIGNESH</h3> {% endcomment %}
-      {% include figure.html image="/images/newprofilepic.png" alt="Image with just alt text" %}
-      <p> You can get in touch with me in any of the below platforms</p>
+      {% include figure.html image="/images/profilepic.jpg" alt="Keshav's Profile Pic" %}
       {% include nav-social.html %}
     </section>
 
